Fixed nav spacing in desktop

--- a/css/main.css
+++ b/css/main.css
@@ -485,6 +485,7 @@ input[type=button] {
 @media only screen and (min-width: 768px) {
   /* Tablet styles here */
 
+  /*----- GENERAL STYLES -----*/
   .content-wrapper {
     width: 83%;
   }
@@ -624,7 +625,7 @@ input[type=button] {
   /* HEADER */
 
   header nav {
-    width: 15%;
+    width: 20%;
   }
 
   /* ---------- HOME PAGE ---------- */
